# Steadi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  install.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  cask-template.rb
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-platform-validation-spike/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md  COMPATIBILITY-MATRIX.md
.planning/phases/02-script-editor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
DOCS/: GUIDE.md  PRD.md
DOCS/brand/: og-image-source.html
main/: index.html
overlay/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: editor-fab-window.json  main-window.json  overlay-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  editor_fab.rs  lib.rs  main.rs  overlay.rs
src/editor-fab/: App.tsx  index.html  main.tsx
src/main/: App.tsx  index.html  main.tsx
src/overlay/: App.tsx  index.html  main.tsx
src/persistence/: markdownMeta.ts  scriptFiles.ts  tauriStorage.ts  types.ts
src/stores/: scriptStore.ts  teleprompterStore.ts  uiStore.ts
src/styles/: globals.css
(+35 files in other folders)
