[package]
name = "steadi"
version = "0.0.1"
description = "Cross-platform invisible teleprompter"
authors = ["you"]
edition = "2021"

[lib]
name = "steadi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-quartz-core = "0.3"
objc2-foundation = "0.3"
